# Widget

./: .gitignore  build.gradle  settings.gradle
app/: .gitignore  (+1 more)
widgetlibrary/: CMakeLists.txt  build.gradle
widgetlibrary/src/androidTest/java/widget/cf/com/widgetlibrary/: ExampleInstrumentedTest.java
widgetlibrary/src/main/: AndroidManifest.xml
widgetlibrary/src/main/assets/emoji/: emoji_onev2.txt
widgetlibrary/src/main/cpp/: c_utils.h  image.cpp
widgetlibrary/src/main/java/widget/cf/com/widgetlibrary/: AlignCenterImageSpan.java  AppearanceImageView.java  AppearanceTextView.java  AutoImageView.java  AutoLayout.java  AutoLinearLayout.java  BaseApplication.java  ColorPickerView.java  ColorPickerViewTest.java  EmojiAppCompatTextView.java  HeadTextDrawable.java  LinearCallbackSmoothScroller.java  MobileEditText.java  PullRecyclerLayout.java  SPUtil.java  ShadowRoundImageView.java  SwipeLayout.java  SwipeLayoutManager.java  TopLinearSmoothScroller.java
widgetlibrary/src/main/res/color/: indicator_selector.xml  nv_menu_select.xml
widgetlibrary/src/main/res/drawable/: bg_green.xml  bg_main_tab_pop.xml  shape_corners_1.xml  small_red_pop.xml
widgetlibrary/src/main/res/layout/: blur_menu_layout.xml  default_indicatior_item.xml  drag_bubble.xml  main_table_item.xml  recycle_indicatior_item.xml  tab_indicatior_item.xml
widgetlibrary/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
widgetlibrary/src/main/res/values-xhdpi/: styles.xml
widgetlibrary/src/test/java/widget/cf/com/widgetlibrary/: ExampleUnitTest.java
(+192 files in other folders)
